<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:theme="@style/Theme.Geoqq.GeoChat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true">

        <com.yandex.mapkit.mapview.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <RadioGroup
            android:id="@+id/radius_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/go_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@drawable/geo_chat_settings_radius_radio_group_background">

            <include
                android:id="@+id/radius_setting_1"
                layout="@layout/component_radius_setting_option"
                app:radiusSettingOptionIsChecked="@{true}"/>

            <include
                android:id="@+id/radius_setting_2"
                layout="@layout/component_radius_setting_option"
                app:radiusSettingOptionIsChecked="@{false}"/>

            <include
                android:id="@+id/radius_setting_3"
                layout="@layout/component_radius_setting_option"
                app:radiusSettingOptionIsChecked="@{false}"/>

            <include
                android:id="@+id/radius_setting_4"
                layout="@layout/component_radius_setting_option"
                app:radiusSettingOptionIsChecked="@{false}"/>

            <include
                android:id="@+id/radius_setting_5"
                layout="@layout/component_radius_setting_option"
                app:radiusSettingOptionIsChecked="@{false}"/>

        </RadioGroup>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginBottom="16dp"
            android:textSize="48sp"
            android:elegantTextHeight="true"
            android:text="@string/go_button_caption"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
